<resources>
    <string name="app_name">bloodshare</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbutton">LOGIN</string>
    <string name="connectfb">CONNECT WITH FACEBOOK</string>
    <string name="doesnthaveacc">doesn\'t have account ?</string>
    <string name="register">Register</string>
    <string name="headerregist">Register</string>
    <string name="regusername">Username</string>
    <string name="registeremail">Email</string>
    <string name="registerphoneno">Phone Number</string>
    <string name="golongandarah">Golongan Darah</string>
    <string name="reshus">Reshus</string>
    <string name="bloodtype">Blood Type</string>
    <string name="registpw">Password</string>
    <string name="registretypepw">Re-Type Password</string>
    <string name="registhomeadress">Home Address</string>
    <string name="job">Job</string>
    <string name="location">Default Location</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="buttonregist">REGISTER</string>
    <string name="termncondition">Agree with Terms and Conditions</string>
    <string name="verif">VERIFY</string>
    <string name="almost">Almost There</string>
    <string name="activatewarn1">Thank you for registering with us. One more</string>
    <string name="activatewarn2">step, you need to check your email</string>
    <string name="activatewarn3">to active your account</string>
    <string name="verifyacc">Verify your Account</string>
    <string name="verifynotif">We\'ve send verification code to your email</string>
    <string name="enterverif">enter verification code here …</string>
    <string name="send">Send</string>
    <string name="dosnotgetcode">doesn\'t get the code ?</string>
    <string name="resend">Resend</string>
    <string name="nama">Alvin Algadri</string>
    <string name="bloodtypeprofile">Blood Type : A</string>
    <string name="bloodgive">BLOOD GIVE</string>
    <string name="bloodreceived">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="bloodgiveval">75</string>
    <string name="bloodreceiveval">100</string>
    <string name="thanksval">330</string>
    <string name="searchdonor">Search Donor</string>
    <string name="bloodneeded">Blood Needed</string>
    <string name="message">Message</string>
    <string name="donorhistory">Donor History</string>
    <string name="searchdonordesc">Search donor near you</string>
    <string name="bloodneededdesc">4 Users need blood</string>
    <string name="messagedesc">5 New Messages</string>
    <string name="donorhistorydesc">5 Given, 2 Received</string>
</resources>